# mcp-sql-paas-universal

./: .env.template  .railwayignore  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml  railway-deploy.sh  railway.toml  requirements.txt
config/: snowflake.yaml  sqlserver.yaml
config/erp/: dynamics365.yaml  sap_s4hana.yaml
config/mcp_clients/: claude_desktop_config.json  cursor_mcp.json
docker/: Dockerfile.azure  Dockerfile.hana  Dockerfile.postgres  Dockerfile.snowflake  Dockerfile.sqlserver
docs/: security.md
src/: cli.py
src/adapters/: __init__.py  azure_sql.py  postgresql.py  sap_hana.py  snowflake.py  sqlserver.py
src/core/: __init__.py  base_server.py  connection_pool.py  logging_config.py  security.py
src/erp/: __init__.py  dynamics365.py  sap_s4hana.py
src/servers/: __init__.py  sqlserver_server.py
