[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sql-universal"
version = "0.1.0"
description = "Universal MCP Server Framework for SQL Databases and ERP Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MCP SQL PaaS Team", email = "team@example.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "sql",
    "database",
    "erp",
    "ai",
    "llm",
    "azure",
    "snowflake",
    "sap-hana",
    "postgresql"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
sqlserver = [
    "pyodbc>=5.1.0",
    "pymssql>=2.3.0",
]
azure = [
    "pyodbc>=5.1.0",
    "msal>=1.26.0",
]
snowflake = [
    "snowflake-connector-python>=3.7.0",
]
hana = [
    "hdbcli>=2.19.0",
]
postgres = [
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
]
mysql = [
    "mysql-connector-python>=8.3.0",
]
oracle = [
    "oracledb>=2.0.0",
]
all = [
    "mcp-sql-universal[sqlserver,azure,snowflake,hana,postgres,mysql,oracle]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
mcp-sql-server = "src.cli:main"

[project.urls]
Homepage = "https://github.com/chad-atexpedient/mcp-sql-paas-universal"
Documentation = "https://github.com/chad-atexpedient/mcp-sql-paas-universal/docs"
Repository = "https://github.com/chad-atexpedient/mcp-sql-paas-universal.git"
Issues = "https://github.com/chad-atexpedient/mcp-sql-paas-universal/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
